less/home-page.less
.home {

  .content-section {
    margin: 30px 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

   
    
    .text-content {
      width: 48%;
      padding-right: 1%;
    }

    .img-content {
      width: 48%;
      padding-left: 1%;

      img {
        border-radius: 10px;
      }
    }
  }

  .inverse-content {
    padding-bottom: 30px;
    border-bottom: 2px dashed @navigation-border;

    .text-content {
      padding-left: 1%;
      padding-right: 0;
    }

    .img-content {
      padding-right: 1%;
      padding-left: 0;
    }
  }

  .content-destination {
    width: 75%;
    margin: 0 auto 30px;

    img {
      border-radius: 10px;
    }
  }

  .content-pick {
    padding-top: 30px;
    border-top: 2px dashed @navigation-border;
    display: flex;
    justify-content: space-between;

    .destination {
      width: 30%;
      margin-bottom: 30px;
    }
  }
}// home
.introduction {
  .introText {
    padding-top: 20px;
    padding-bottom: 20px;
    border-bottom: 2px dashed silver;
  }
}

